[gd_scene load_steps=2 format=3 uid="uid://d2oketafsdnyr"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_j1qkw"]

[node name="Menu" type="CanvasLayer" node_paths=PackedStringArray("start_button", "settings_button", "quit_button")]
follow_viewport_enabled = true
script = ExtResource("1_j1qkw")
start_button = NodePath("MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/StartButton")
settings_button = NodePath("MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/SettingsButton")
quit_button = NodePath("MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/QuitButton")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
